--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </h1>
       <ul class="gnb">
         <li>
-          <a href="../code/reservation.html">예약하기</a>
+          <a href="reservation.html">예약하기</a>
         </li>
         <li>
           <a href="#">운항정보</a>
