--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--로고-->
     <div class="side_nav">
       <h1 class="logo">
-        <a href="#"><img src="img/logo.png"></a>
+        <a href="index.html"><img src="img/logo.png"></a>
       </h1>
       <ul class="gnb">
         <li>
